wassim-commit